--- a/senior/Placement/Content/css/styles.css
+++ b/senior/Placement/Content/css/styles.css
@@ -24,8 +24,9 @@ footer .infomation { background-color: rgba(255, 255, 255, 0.125); color: #fff; 
 footer .infomation .logo { margin-bottom: 1.5rem; }
 footer .infomation .infomation-data { padding-left: 13%; margin-bottom: 1.5rem; }
 footer .infomation .infomation-data p { margin-bottom: .25rem; }
-footer .infomation .infomation-nav { margin-top: .75rem; margin-bottom: .75rem; padding-left: 8.5%; flex-wrap: nowrap; white-space: nowrap; }
-footer .infomation .infomation-nav a { color: #fff; font-size: 1rem; text-align: left; }
+footer .infomation .infomation-nav { margin-top: .75rem; margin-bottom: .75rem; padding-left: 8.5%; }
+@media screen and (min-width: 480px) { footer .infomation .infomation-nav { flex-wrap: nowrap; } }
+footer .infomation .infomation-nav a { color: #fff; font-size: 1rem; text-align: left; white-space: nowrap; }
 footer .infomation .infomation-nav a:hover, footer .infomation .infomation-nav a:focus, footer .infomation .infomation-nav a:active { color: #FFF580; }
 footer .infomation .infomation-link { font-size: 1rem; display: flex; align-items: center; padding-left: 1rem; margin-top: .75rem; margin-bottom: .75rem; }
 footer .infomation .infomation-link a { display: inline-block; width: 10rem; height: auto; margin-left: 1rem; border-radius: .5rem; overflow: hidden; }
@@ -112,7 +113,7 @@ a { text-underline-offset: .25em; word-break: break-all; }
 .index .hero .hero-carousel .owl-dots .owl-dot.active { background-color: #0068b7; box-shadow: 0 0 0.25rem rgba(255, 255, 255, 0.75); }
 .index .hero .hero-ip { width: 15%; height: auto; position: absolute; bottom: 1.5rem; right: 2rem; z-index: 2; animation-duration: 3s; }
 .index .hero .hero-ip img { max-width: 100%; max-height: 100%; }
-.index .news .list-group .list-group-item { color: rgba(52, 58, 64, 0.75); border-color: transparent; padding: 0.25rem 0; }
+.index .news .list-group .list-group-item { color: rgba(52, 58, 64, 0.75); border-color: transparent; padding: 0.25rem 0; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 .index .news .list-group .list-group-item:hover, .index .news .list-group .list-group-item:focus, .index .news .list-group .list-group-item:active { color: #0068b7; }
 .index .news .news-tag { margin-right: 0.25rem; }
 .index .feature { background-color: rgba(204, 232, 247, 0.5); padding-top: 1.5rem; padding-bottom: 1.5rem; }
