--- a/senior/Placement/Content/scss/pages/_scorePlacement.scss
+++ b/senior/Placement/Content/scss/pages/_scorePlacement.scss
@@ -101,7 +101,7 @@
 				}
 			}
 			
-			.form-control:focus{
+			.form-control:focus, .form-select:focus{
 				border-color: rgba($placement-color, $focus-ring-opacity);
     			box-shadow: 0 0 $focus-ring-blur $focus-ring-width rgba($placement-color, $focus-ring-opacity);
 			}
