--- a/senior/Placement/Content/scss/pages/_careerPlacement.scss
+++ b/senior/Placement/Content/scss/pages/_careerPlacement.scss
@@ -84,6 +84,8 @@
 				.search-subject-score{ 
 					.col-form-label, .form-control{
 						text-align: center;
+						min-width: auto;
+						width: 100%;
 					}
 				}
 			}
