--- a/senior/Placement/Content/css/styles.css
+++ b/senior/Placement/Content/css/styles.css
@@ -58,6 +58,8 @@ a { text-underline-offset: .25em; word-break: break-all; }
 
 .form-check-input[type="radio"]:checked { background-color: #fff !important; }
 
+.form-required { color: #E2341D; position: absolute; transform: translate(-0.5em, -0.25em); }
+
 .icon-link { align-items: flex-start; }
 
 .link-scale { transition: .35s ease; }
@@ -266,7 +268,7 @@ main.news { background: -webkit-linear-gradient(rgba(204, 225, 241, 0.25) 0%, rg
 .careerPlacement .search .card .card-header .card-title { font-size: 1rem; font-weight: 500; margin-bottom: 0; }
 .careerPlacement .search .card .card-body label { font-size: 0.875rem; }
 .careerPlacement .search .card .card-body .col-form-label { min-width: 8rem; }
-.careerPlacement .search .card .card-body .search-subject-score .col-form-label, .careerPlacement .search .card .card-body .search-subject-score .form-control { text-align: center; }
+.careerPlacement .search .card .card-body .search-subject-score .col-form-label, .careerPlacement .search .card .card-body .search-subject-score .form-control { text-align: center; min-width: auto; width: 100%; }
 .careerPlacement .search .card .form-control:focus, .careerPlacement .search .card .form-select:focus { border-color: rgba(63, 81, 181, 0.25); box-shadow: 0 0 0 0.25rem rgba(63, 81, 181, 0.25); }
 .careerPlacement .search .card .form-check-input:focus { box-shadow: 0 0 0 0.25rem rgba(63, 81, 181, 0.25); }
 .careerPlacement .search .card .form-check-input:hover + .form-check-label { color: #3F51B5; }
