--- a/senior/Placement/Content/scss/pages/_careerPlacement.scss
+++ b/senior/Placement/Content/scss/pages/_careerPlacement.scss
@@ -22,7 +22,7 @@
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: 100% 100%;	
-			z-index: 1;
+			z-index: 2;
 		}
 		&::after{ 
 			content: "";
@@ -40,6 +40,10 @@
 			background-size: auto 75%, auto 60%;	
 			z-index: 1;
 		}
+		> *{
+			position: relative;
+			z-index: 2;
+		}
 		.banner-title{
 			color: $white;
 			font-size: 1.75rem;
@@ -47,8 +51,6 @@
 			text-shadow: 1px 1px .125rem rgba($black, .5);
 			text-align: center;
 			margin-bottom: 0;
-			position: relative;
-			z-index: 1;
 			> small{
 				display: block;
 				margin-top: .75rem;
@@ -157,7 +159,7 @@
 		padding-bottom: map-get($spacers, 7);
 		background-color: $body-tertiary-bg;
 		position: relative;
-		z-index: 2;
+		z-index: 3;
 		.result-info{
 			padding-top: map-get($spacers, 4);
 			padding-bottom: map-get($spacers, 4);
@@ -264,7 +266,7 @@
 						background-color: rgba($color, .25);
 					}
 					&:hover{
-						background-color: rgba($color, .1);
+						background-color: tint-color($color, 90%);
 					}
 					&.active{	
 						background-color: $color;
